# rust-require_unsafe_in_body

./: Cargo.toml  Makefile  README.md
src/: lib.rs  tests.rs
src/docs/: require_unsafe_in_bodies.md  require_unsafe_in_body.md
src/utils/: macros.rs  mod.rs
tests/: compile_fail.rs  compile_success.rs  impl_method.rs  impl_method_2.rs  trait_default_method.rs  ui.rs
tests/compile_fail/: body_on_method.stderr  body_on_method_2.stderr
tests/compile_success/: associated_types.rs  async.rs  bounds_and_clauses.rs  inherent_impl.rs  mods.rs  trait_default_method.rs  trait_impl.rs
tests/ui/: body_on_method.rs  body_on_method_2.rs  readme.rs  readme.stderr
